Directional blur node doesn't clamp value if using driver #50973

Closed
opened 2017-03-17 01:46:05 +01:00 by Serge Lyatin · 8 comments

System Information
Win7 32 bit

Blender Version
Broken: 2.78a

Short description of error
BI viewport doesn't render until use limits for a driver.

Exact steps for others to reproduce the error
Add driver to X coordinate which has value out of 0-1 and try to viewport render. Or in .Blend file you can mute/unmute "Limit modifier" for driver.
Direct_clamp.blend

**System Information** Win7 32 bit **Blender Version** Broken: 2.78a **Short description of error** BI viewport doesn't render until use limits for a driver. **Exact steps for others to reproduce the error** Add driver to X coordinate which has value out of 0-1 and try to viewport render. Or in .Blend file you can mute/unmute "Limit modifier" for driver. [Direct_clamp.blend](https://archive.blender.org/developer/F511350/Direct_clamp.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @SergeL

Added subscriber: @SergeL

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Confirmed. Note to other testers on how to test it:

  • Load file, enable auto-run scripts
  • Switch viewport to rendered
  • The viewport has nothing rendered.

Now move the cube on its Z axis. When the coordinate is within 0/1.0 range, the viewport render shows something. Otherwise it "freezes" the render again.

Even if you replace the driver expression by directly typing the value (0.2, 1.4, ...) you get the same issue.

It seems like the compositor is expecting a clamped value, and since driver gives you something else, it is blocking the render in viewport.

Confirmed. Note to other testers on how to test it: * Load file, enable auto-run scripts * Switch viewport to rendered * The viewport has nothing rendered. Now move the cube on its Z axis. When the coordinate is within 0/1.0 range, the viewport render shows something. Otherwise it "freezes" the render again. Even if you replace the driver expression by directly typing the value (0.2, 1.4, ...) you get the same issue. *It seems like the compositor is expecting a clamped value, and since driver gives you something else, it is blocking the render in viewport.*

This is not related to the directional blur node. Here is an even simpler file using another node: driver.blend
Note that the compositor node is not even being used.

This is not related to the directional blur node. Here is an even simpler file using another node: [driver.blend](https://archive.blender.org/developer/F628387/driver.blend) Note that the compositor node is not even being used.

(for the records the original claim that clamping is the issue could be solved with P494, but RNA is already clamping the values before we get to the compositor, so this patch is uneeded)

(for the records the original claim that clamping is the issue could be solved with [P494](https://archive.blender.org/developer/P494.txt), but RNA is already clamping the values before we get to the compositor, so this patch is uneeded)
Sergey Sharybin was assigned by Dalai Felinto 2017-06-13 12:02:41 +02:00

This issue was referenced by 00d476976e

This issue was referenced by 00d476976e88052e8410916fca1d86d5f12529ca

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50973
No description provided.